# tarot

./: Cargo.toml  rust_lambda_helpers.zsh  star.py  tarot.csv  tarot.ipynb  tarot.py
src/: main.rs
